[BRANDSR-8908] Fix overlap issue on PLP with 2 column

--- a/app/design/frontend/Laneige/my/Magento_Catalog/web/css/source/_module.less
+++ b/app/design/frontend/Laneige/my/Magento_Catalog/web/css/source/_module.less
@@ -933,11 +933,9 @@
     }
 
     .catalog-category-view {
-        &.page-layout-1column {
-            &.page-with-filter{
-                .page-title-wrapper {
-                    margin-top: 60px;
-                }
+        &.page-with-filter {
+            .page-title-wrapper {
+                margin-top: 60px !important;
             }
         }
     }
